--- a/Styles-mediaquery.css
+++ b/Styles-mediaquery.css
@@ -143,6 +143,7 @@
         padding: 2em 0;
         display: flex;
         flex-direction: column;
+        position: relative;
         gap: 2em;
         width: 100%;
     }
